--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@
   .active {
     @apply opacity-50 border-2 border-orange
   }
+  .button {
+    @apply flex w-full justify-center gap-2 bg-orange shadow-xl text-white px-14 py-4 rounded-lg items-center cursor-pointer hover:opacity-50
+  }
+  .cart {
+    @apply absolute top-16 px-5 py-8 w-[95%] md:w-[35%] md:right-[0] z-[500] md:shadow-2xl rounded-xl bg-white
+  }
 
 }
 
